--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="renderer" content="webkit">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>adminnnn</title>
+    <title>信息管理系统</title>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script>
+    var _hmt = _hmt || [];
+    (function () {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?f8ac10107ecf9d6d926f87aab7fa8400";
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(hm, s);
+    })();
+  </script>
 </html>
