--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="renderer" content="webkit">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+<link rel="shortcut icon" href="http://www.huibohehe.com/crm/favicon.ico" type="image/x-icon" />
     <title>信息管理系统</title>
   </head>
   <body>
